syntax = "proto3";

package proto;

option go_package = "example.com/proto";

service Registry {
    rpc RegisterService (RegisterServiceRequest) returns (RegisterServiceResponse) {}
}

message RegisterServiceRequest {
    string name = 1;
    int32 port = 2;
    string version = 3;
    int32 concurrency = 4;
}

message RegisterServiceResponse {
    string message = 1;
}
